# HallofFame

./: manage.py  pyproject.toml  seed_data.json
HallofFame/: asgi.py  settings.py  urls.py  wsgi.py
halls/: admin.py  forms.py  models.py  views.py
halls/migrations/: 0001_initial.py
halls/static/: custom.css
halls/templates/halls/: add_video.html  base.html  create_hall.html  dashboard.html  del_vid.html  delete_hall.html  detail_hall.html  home.html  update_hall.html
halls/templates/registration/: login.html  signup.html
