[tool.poetry]
name = "halloffame"
version = "0.1.0"
description = ""
authors = ["Srivatsav <srivatsav.vijay2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-widget-tweaks = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
